Fixed stretching format tags

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,7 +96,7 @@ h2 {
 
 /* Tags */
 .tag {
-  @apply text-sm font-medium px-3 py-1 rounded-full;
+  @apply text-sm font-medium px-3 py-1 rounded-full whitespace-nowrap;
 }
 
 .tag-blue {
@@ -109,7 +109,7 @@ h2 {
 
 /* Main Grid */
 .main-grid {
-  @apply grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 gap-6;
+  @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-6;
 }
 
 .movie-card {
